# python-starter-1

./: .gitignore  01_hello.md  02_iteration.md  03_fizzbuzz.md  03_fizzbuzz.py  04_fibonacci.md  04_fibonacci.py  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  task01_hello.md  task01_hello.py  task02_iteration.md  task02_iteration.py  task03_fizzbuzz.md  task03_fizzbuzz.py  task04_fibonacci.md  task04_fibonacci.py
.github/workflows/: unit-test.yaml
docs/: getting_started.md  git_intro.md  glossary.md  troubleshooting.md  uv_guide.md
tests/: conftest.py  test_01_hello.py  test_02_iteration.py  test_03_fizzbuzz.py  test_04_fibonacci.py
