[project]
name = "python-starter-1"
version = "0.1.0"
description = "Python self-study exercises for physics students"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.uv]
dev-dependencies = []
