[project]
name = "python-starter-1"
version = "0.1.1"
description = "Python self-study exercises for physics students"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]  # for educational; not for production!
